# rae-ros

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh  requirements.txt  robot_demo.sdf
.devcontainer/: devcontainer.json
.github/workflows/: main.workflow.yaml
depthai_bridge/launch/: rae_gazebo_desc_launch.py  rae_teleopt_wip_launch.py
depthai_bridge/rviz/: show_model.rviz
depthai_bridge/urdf/: inertial_moment_calc.xacro  rae.urdf.xacro  rae_gazebo.urdf.xacro
depthimage_to_laserscan/include/depthimage_to_laserscan/: DepthImageToLaserScan.hpp
depthimage_to_laserscan/src/: DepthImageToLaserScan.cpp  DepthImageToLaserScanROS.cpp
depthimage_to_laserscan/test/: DepthImageToLaserScanTest.cpp
laserscan_kinect/: CMakeLists.txt
laserscan_kinect/config/: params.yaml
laserscan_kinect/include/laserscan_kinect/: laserscan_kinect.hpp  laserscan_kinect_node.hpp
laserscan_kinect/launch/: laserscan.launch.py
laserscan_kinect/scripts/: laser_scan.py
laserscan_kinect/src/: laserscan_kinect.cpp  laserscan_kinect_node.cpp
rae_bringup/: CMakeLists.txt  package.xml
rae_bringup/config/: cal.json  camera.yaml  robot.yaml  sim.rviz  sim.yaml  slam_param.yaml  yolo.json
rae_bringup/launch/: bringup.launch.py  nav.launch.py  rae_camera.launch.py  robot.launch.py  rtabmap.launch.py  rviz.launch.py  slam.launch.py
rae_bringup/scripts/: audio_spectrum.py  battery_status.py  led_test.py  scan_repub.py  sound_test.py
rae_camera/: CMakeLists.txt  package.xml
rae_camera/config/: camera.yaml  ipc.yaml  spectacular.rviz  spectacular.yaml
rae_camera/launch/: camera.launch.py  perception_ipc.launch.py  rae_camera.launch.py  spectacular.launch.py
rae_camera/src/: camera.cpp  perception_ipc_rtabmap.cpp  perception_ipc_st.cpp  stereo_depth.cpp  stereo_pair.cpp  yolo.cpp
rae_camera_example/: CMakeLists.txt  package.xml
rae_camera_example/src/: camera.cpp
rae_description/: CMakeLists.txt  package.xml
rae_description/launch/: rae_gazebo_desc_launch.py  rsp.launch.py
rae_description/urdf/: camera.urdf.xacro  inertial_moment_calc.xacro  rae.urdf.xacro  rae_control.xacro  rae_core.urdf.xacro  rae_gazebo.urdf.xacro  rae_gazebo.xacro  rae_gazebo_control.urdf.xacro  rae_ros2_control.urdf.xacro
rae_gazebo/: CMakeLists.txt  package.xml
rae_gazebo/config/: gz_bridge.yaml
rae_gazebo/launch/: gazebo.launch.py  rae_simulation.launch.py
rae_gazebo/models/RAE/: model.config  model.sdf
rae_gazebo/models/RAE/meshes/: caster-wheel.stl
rae_gazebo/world/: robot_demo.sdf
rae_gazebo/worlds/: world_demo.sdf
rae_hw/: CMakeLists.txt  package.xml  rae_hw.xml
rae_hw/config/: controller.yaml  ekf.yaml
rae_hw/include/rae_hw/: battery.hpp  leds.hpp  rae_hw.hpp  rae_motors.hpp  spidev.h  visibility_control.h
rae_hw/include/rae_hw/peripherals/: battery.hpp  lcd.hpp  led.hpp  mic.hpp  speakers.hpp  spidev.h
rae_hw/launch/: control.launch.py  control_mock.launch.py  peripherals.launch.py  rae_control.launch.py
rae_hw/scripts/: diff_controller_test.py  lifecycle_manager.py  mock_battery.py  mock_lcd.py  mock_leds.py  mock_mic.py  mock_speakers.py  mock_wheels.py  sys_info_node.py
rae_hw/scripts/mock/: mock_battery.py  mock_lcd.py  mock_mic.py  mock_speakers.py  mock_wheels.py
rae_hw/src/: battery.cpp  lcd.cpp  led.cpp  leds.cpp  mic.cpp  mic_node.cpp  rae_hw.cpp  rae_motors.cpp  speakers.cpp  speakers_node.cpp
rae_hw/src/peripherals/: battery.cpp  lcd.cpp  led.cpp  mic.cpp  speakers.cpp
rae_hw/test/: test_encoders.cpp  test_max_speed.cpp  test_motors.cpp  test_rae_hw.cpp  test_speed.cpp
rae_msgs/: CMakeLists.txt  package.xml
rae_msgs/action/: Recording.action
rae_msgs/msg/: ColorPeriod.msg  LEDControl.msg  RAEAudio.msg
rae_msgs/srv/: PlayAudio.srv  RecordAudio.srv
rae_python_api/: package.xml  setup.cfg  setup.py
rae_python_api/rae_python_api/robot/: audio.py  display.py  movement.py  robot.py
rae_python_api/rae_python_api/robot/api/: performance.py
rae_python_api/rae_python_api/robot/api/ros/: ros2_manager.py
rae_python_api/rae_python_api/robot/perception/: perception_system.py  pipeline.py
rae_python_api/scripts/: start_ros.sh
rae_sdk/: package.xml  setup.cfg  setup.py
rae_sdk/config/: example_config.yaml
rae_sdk/rae_sdk/robot/: __init__.py  audio.py  display.py  led.py  navigation.py  robot.py  robot_options.py  state.py
rae_sdk/rae_sdk/robot/api/: openai.py
rae_sdk/rae_sdk/robot/api/ros/: ros_interface.py
rae_sdk/rae_sdk/robot/perception/: perception_system.py  pipeline.py
robot_py/: package.xml  setup.cfg  setup.py
robot_py/robot_py/robot/: audio.py  display.py  led.py  movement.py  robot.py
robot_py/robot_py/robot/api/ros/: ros2_manager.py  ros_interface.py
robot_py/robot_py/robot/perception/: detections.py  perception_system.py  pipeline.py
