<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rae_camera</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="adam.serafin@luxonis.com">Adam Serafin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>camera_info_manager</depend>
  <depend>depthai_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>depthai</depend>
  <depend>imu_filter_madgwick</depend>
  <depend>rclcpp_components</depend>
  <depend>depthai_ros_driver</depend>
  <depend>rtabmap_slam</depend>
  <depend>ira_laser_tools</depend>
  <depend>laserscan_kinect</depend>
  <depend>image_proc</depend>
  <depend>rtabmap_odom</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
