<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rae_gazebo</name>
  <version>0.0.0</version>
  <description>RAE Gazebo package</description>
  <maintainer email="adam.serafin@luxonis.com">Adam Serafin</maintainer>
  <maintainer email="danilo.pejovic@luxonis.com">Danilo Pejovic</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
